menambahkan fitur update di praktikum 7.2

--- a/app/src/main/res/layout/activity_prak72.xml
+++ b/app/src/main/res/layout/activity_prak72.xml
@@ -91,6 +91,7 @@
 <ListView
     android:id="@+id/lvLihat"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="20dp">
 </ListView>
 </LinearLayout>
