--- a/app/src/main/res/layout/list_mahasiswa.xml
+++ b/app/src/main/res/layout/list_mahasiswa.xml
@@ -6,30 +6,39 @@
 
     <TextView
         android:id="@+id/tvNim"
-        android:layout_width="50dp"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/tvNama"
-        android:layout_width="69dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/tvIpk"
-        android:layout_width="10dp"
+        android:layout_width="20dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
 
-    <Button
+    <ImageButton
+    android:id="@+id/btnEdit"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/baseline_edit_24"
+        android:layout_marginStart="10dp"
+    android:background="?android:attr/selectableItemBackgroundBorderless" />
+
+    <ImageButton
         android:id="@+id/btnHapus"
-        android:layout_width="15dp"
-        android:backgroundTint="@color/cardview_dark_background"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Del" />
+        android:src="@drawable/baseline_delete_24"
+        android:layout_marginStart="10dp"
+        android:background="?android:attr/selectableItemBackgroundBorderless" />
+
 </LinearLayout>
