--- a/app/src/main/res/layout/activity_latihan51.xml
+++ b/app/src/main/res/layout/activity_latihan51.xml
@@ -103,31 +103,31 @@
             android:layout_gravity="center_horizontal"
             app:cardBackgroundColor="#4582A9"
             android:layout_marginTop="50dp">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-
-            <ImageButton
-                android:id="@+id/btn_login"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#4582A9"
-                android:src="@drawable/baseline_lock_outline_24"
-                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+                android:orientation="horizontal"
+                android:layout_gravity="center">
 
-            <TextView
-                android:layout_gravity="center"
-                android:padding="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#4582A9"
-                android:text="LOG IN"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold" />
-        </LinearLayout>
+                <ImageButton
+                    android:id="@+id/btn_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#4582A9"
+                    android:src="@drawable/baseline_lock_outline_24"
+                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:padding="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#4582A9"
+                    android:text="LOG IN"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
 
@@ -137,6 +137,7 @@
             android:layout_marginTop="20dp"
             android:text="Don't have an account? Sign Up"
             android:textAlignment="center"
+            android:textStyle="italic"
             android:textColor="#4582A9" />
     </LinearLayout>
 
