--- a/app/src/main/res/layout/activity_latihan72.xml
+++ b/app/src/main/res/layout/activity_latihan72.xml
@@ -15,7 +15,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -258,7 +258,7 @@
             <ListView
                 android:id="@+id/lvLihat"
                 android:layout_width="match_parent"
-                android:layout_height="206dp"
+                android:layout_height="147dp"
                 android:layout_marginTop="20dp" />
 
         </LinearLayout>
