--- a/app/src/main/res/layout/activity_latihan52.xml
+++ b/app/src/main/res/layout/activity_latihan52.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Latihan52">
+    tools:context=".Latihan52"
+    android:background="@color/white">
     <!-- Header Background -->
     <RelativeLayout
         android:id="@+id/ic_header"
