--- a/app/src/main/res/layout/activity_prak91.xml
+++ b/app/src/main/res/layout/activity_prak91.xml
@@ -7,4 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".Prak9_1">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
